server/src/main/java/com/example/scienceops/common/error/InvalidStateException.java
package com.example.scienceops.common.error;

public class InvalidStateException extends RuntimeException {

    public InvalidStateException(String message) {
        super(message);
    }
}
